# cpp-oop-linux-practice

./: .gitignore  CMakeLists.txt  README.md
include/: admin.hpp  location.hpp  user.hpp
src/: admin.cpp  location.cpp  main.cpp  user.cpp
tests/: test_main.cpp
